--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Your Calculator</title>
     <link rel="stylesheet" href="global.css">
     <script src="calculator.js"></script>
 </head>
@@ -40,7 +40,7 @@
         </div>
         
     
-    <h3 id="out">Your Output</h5>
+    <h3 id="out">Value is </h5>
     <h4 id="output"></h4>
 </center>
 </body>
